[package]
name = "modbus-tester"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iced = { git="https://github.com/iced-rs/iced.git", version = "0.4", features = ["tokio"]  }

serde = {version = "1.0.143", features = ["derive"]}
ron = "0.8.0"

meval = "0.2.0"

crc = "3.0.0"
serialport = "4.2.0"

num = "0.4.0"

sawp = "0.11.1"
sawp-modbus = "0.11.1"

string-to-num = "^0.1"
read-to-timeout = "^0.1"

[profile.release]
opt-level = 3

codegen-units = 1
lto = true
strip = true

